add polished prototype for database generation

--- a/notebooks/prototype.ipynb
+++ b/notebooks/prototype.ipynb
@@ -224,6 +224,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ji': ['dkdk', 'dkdk']}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d['ji'] = ['dkdk', 'dkdk']\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -233,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,6 +277,7 @@
     "        self.ensembles = self._df.ensemble.unique()\n",
     "        self.frequencies = self._df.frequency.unique()\n",
     "        self.realms = self._df.realm.unique()\n",
+    "        self.cat_entry_name = ''\n",
     "        kwargs.setdefault('name', database_file)\n",
     "        \n",
     "        super().__init__(**kwargs)\n",
@@ -262,6 +293,18 @@
     "        else:\n",
     "            raise FileNotFoundError(f\"{self._database_file}\")\n",
     "            \n",
+    "    def _generate_entry(self):\n",
+    "        query_results = self._latest_query_results\n",
+    "        ds_dict = {}\n",
+    "        for ens_i in query_results.ensemble.unique():\n",
+    "            ens_match = (query_results.ensemble == ens_i)\n",
+    "            paths = query_results.loc[ens_match].file_fullpath.tolist()\n",
+    "            ds_dict[ens_i] = paths\n",
+    "            \n",
+    "        return ds_dict\n",
+    "                \n",
+    "            \n",
+    "            \n",
     "    def _query_database(self, model, experiment, frequency, realm, ensemble, varname):\n",
     "        query = {'model': model,\n",
     "                'experiment': experiment,\n",
@@ -271,9 +314,10 @@
     "                'varname': varname}\n",
     "        \n",
     "        condition = np.ones(len(self._df), dtype=bool)\n",
-    "        \n",
+    "        cat_entry_name = 'cmip5'\n",
     "        for key, val in query.items():\n",
     "            if val is not None:\n",
+    "                cat_entry_name = cat_entry_name+'-'+val\n",
     "                condition = condition & (self._df[key] == val)\n",
     "        df_subset = self._df.loc[condition]\n",
     "        if df_subset.empty:\n",
@@ -289,6 +333,7 @@
     "        if len(realm_list) != 1:\n",
     "            raise ValueError(f\"{varname} found in multiple realms:\\n \\\n",
     "                          '\\t{realm_list}. Please specify the realm to use\")\n",
+    "        self.cat_entry_name = cat_entry_name\n",
     "        return df_subset\n",
     "        \n",
     "    def search(self, model=None, experiment=None, frequency=None, realm=None, ensemble=None, varname=None):\n",
@@ -299,7 +344,7 @@
     "        query_result = self._latest_query_results\n",
     "        args = {'query_result': query_result}\n",
     "        return intake.catalog.local.LocalCatalogEntry(\n",
-    "        name='test',\n",
+    "        name=self.cat_entry_name,\n",
     "        description={},\n",
     "        driver= '__main__.CMIP5DataSource',\n",
     "        direct_access='forbid',\n",
@@ -313,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,16 +367,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = a.search(model='GFDL-CM3', realm=\"atmos\", frequency=\"mon\", experiment='rcp85', ensemble='r1i1p1', varname='ua')"
+    "b = a.search(model='GFDL-CM3', realm=\"atmos\", frequency=\"mon\", experiment='rcp85', ensemble='r1i1p1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'r1i1p1': ['/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/ua_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc',\n",
+       "  '/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/v20120227/ts/ts_Amon_GFDL-CM3_rcp85_r1i1p1_207601-208012.nc',\n",
+       "  '/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/v20120227/tas/tas_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc',\n",
+       "  '/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/v20120227/rlds/rlds_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc',\n",
+       "  '/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/v20120227/sfcWind/sfcWind_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc',\n",
+       "  '/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/v20120227/pr/pr_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc',\n",
+       "  '/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/v20120227/tasmin/tasmin_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc',\n",
+       "  '/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/v20120227/rsds/rsds_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc',\n",
+       "  '/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/v20120227/hurs/hurs_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc',\n",
+       "  '/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/v20120227/hfls/hfls_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc']}"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = a._generate_entry()\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/ua_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.file_fullpath[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.root[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +455,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cmip5-GFDL-CM3-rcp85-mon-atmos-r1i1p1-ua'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +487,7 @@
        " 'user_parameters': []}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +498,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"plugins:\\n  source:\\n  - module: __main__\\nsources:\\n  cmip5-GFDL-CM3-rcp85-mon-atmos-r1i1p1-ua:\\n    args:\\n      query_result: !!python/object:pandas.core.frame.DataFrame\\n        _data: !!python/object/new:pandas.core.internals.BlockManager\\n          state: !!python/tuple\\n          - &id004\\n            - !!python/object/apply:pandas.core.indexes.base._new_Index\\n              - &id003 !!python/name:pandas.core.indexes.base.Index ''\\n              - data: !!python/object/apply:numpy.core.multiarray._reconstruct\\n                  args:\\n                  - &id001 !!python/name:numpy.ndarray ''\\n                  - !!python/tuple\\n                    - 0\\n                  - !!binary |\\n                    Yg==\\n                  state: !!python/tuple\\n                  - 1\\n                  - !!python/tuple\\n                    - 11\\n                  - &id002 !!python/object/apply:numpy.dtype\\n                    args:\\n                    - O8\\n                    - 0\\n                    - 1\\n                    state: !!python/tuple\\n                    - 3\\n                    - '|'\\n                    - null\\n                    - null\\n                    - null\\n                    - -1\\n                    - -1\\n                    - 63\\n                  - false\\n                  - - ensemble\\n                    - experiment\\n                    - file_basename\\n                    - file_fullpath\\n                    - frequency\\n                    - institution\\n                    - model\\n                    - realm\\n                    - root\\n                    - varname\\n                    - version\\n                name: null\\n            - !!python/object/apply:pandas.core.indexes.base._new_Index\\n              - !!python/name:pandas.core.indexes.numeric.Int64Index ''\\n              - data: !!python/object/apply:numpy.core.multiarray._reconstruct\\n                  args:\\n                  - *id001\\n                  - !!python/tuple\\n                    - 0\\n                  - !!binary |\\n                    Yg==\\n                  state: !!python/tuple\\n                  - 1\\n                  - !!python/tuple\\n                    - 1\\n                  - !!python/object/apply:numpy.dtype\\n                    args:\\n                    - i8\\n                    - 0\\n                    - 1\\n                    state: !!python/tuple\\n                    - 3\\n                    - <\\n                    - null\\n                    - null\\n                    - null\\n                    - -1\\n                    - -1\\n                    - 0\\n                  - false\\n                  - !!binary |\\n                    AAAAAAAAAAA=\\n                name: null\\n          - - &id005 !!python/object/apply:numpy.core.multiarray._reconstruct\\n              args:\\n              - *id001\\n              - !!python/tuple\\n                - 0\\n              - !!binary |\\n                Yg==\\n              state: !!python/tuple\\n              - 1\\n              - !!python/tuple\\n                - 11\\n                - 1\\n              - *id002\\n              - false\\n              - - r1i1p1\\n                - rcp85\\n                - ua_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc\\n                - /glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1/ua_Amon_GFDL-CM3_rcp85_r1i1p1_209601-210012.nc\\n                - mon\\n                - NOAA-GFDL\\n                - GFDL-CM3\\n                - atmos\\n                - /glade/collections/cmip/cmip5/output1/NOAA-GFDL/GFDL-CM3/rcp85/mon/atmos/Amon/r1i1p1\\n                - ua\\n                - v0\\n          - - !!python/object/apply:pandas.core.indexes.base._new_Index\\n              - *id003\\n              - data: !!python/object/apply:numpy.core.multiarray._reconstruct\\n                  args:\\n                  - *id001\\n                  - !!python/tuple\\n                    - 0\\n                  - !!binary |\\n                    Yg==\\n                  state: !!python/tuple\\n                  - 1\\n                  - !!python/tuple\\n                    - 11\\n                  - *id002\\n                  - false\\n                  - - ensemble\\n                    - experiment\\n                    - file_basename\\n                    - file_fullpath\\n                    - frequency\\n                    - institution\\n                    - model\\n                    - realm\\n                    - root\\n                    - varname\\n                    - version\\n                name: null\\n          - 0.14.1:\\n              axes: *id004\\n              blocks:\\n              - mgr_locs: !!python/object/apply:builtins.slice\\n                - 0\\n                - 11\\n                - 1\\n                values: *id005\\n        _metadata: []\\n        _typ: dataframe\\n    description: ''\\n    driver: cmip5\\n    metadata:\\n      cache: null\\n      catalog_dir: null\\n\""
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.yaml(with_plugin=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +570,7 @@
        "    parent_experiment_rip:  r1i1p1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
