Update documentation for source and database modules

--- a/docs/source/notebooks/overview.ipynb
+++ b/docs/source/notebooks/overview.ipynb
@@ -31,10 +31,11 @@
      "output_type": "stream",
      "text": [
       "../../../intake_cmip5/\n",
-      "../../../intake_cmip5//generate_database.py\n",
       "../../../intake_cmip5//_version.py\n",
+      "../../../intake_cmip5//database.py\n",
       "../../../intake_cmip5//__init__.py\n",
       "../../../intake_cmip5//__pycache__\n",
+      "../../../intake_cmip5//__pycache__/database.cpython-36.pyc\n",
       "../../../intake_cmip5//__pycache__/_version.cpython-36.pyc\n",
       "../../../intake_cmip5//__pycache__/generate_database.cpython-36.pyc\n",
       "../../../intake_cmip5//__pycache__/source.cpython-36.pyc\n",
@@ -203,7 +204,7 @@
     "import xarray as xr\n",
     "import shutil\n",
     "import tempfile\n",
-    "from intake_cmip5.generate_database import create_CMIP5Database"
+    "from intake_cmip5.database import create_CMIP5Database"
    ]
   },
   {
@@ -253,7 +254,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**** Persisting CMIP5 database in /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmpqwtjss04 ****\n"
+      "**** Persisting CMIP5 database in /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmp59esr_5r ****\n"
      ]
     },
     {
@@ -405,7 +406,7 @@
     {
      "data": {
       "text/plain": [
-       "<intake_cmip5.source.CMIP5DataSource at 0x117d4db70>"
+       "<intake_cmip5.source.CMIP5DataSource at 0x1223dfb00>"
       ]
      },
      "execution_count": 13,
@@ -519,7 +520,7 @@
       "sources:\n",
       "  cmip5:\n",
       "    args:\n",
-      "      database_file: /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmpqwtjss04/clean_cmip5_database.csv\n",
+      "      database_file: /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmp59esr_5r/clean_cmip5_database.csv\n",
       "      ensemble: r2i1p1\n",
       "      experiment: rcp85\n",
       "      frequency: mon\n",
