--- a/docs/source/notebooks/overview.ipynb
+++ b/docs/source/notebooks/overview.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The directory `intake-cmip5` contains a full package to do the job"
+    "The directory `intake-cmip` contains a full package to do the job."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intake-cmip5 structure"
+    "## Intake-cmip structure"
    ]
   },
   {
@@ -30,30 +30,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../../../intake_cmip5/\n",
-      "../../../intake_cmip5//_version.py\n",
-      "../../../intake_cmip5//database.py\n",
-      "../../../intake_cmip5//__init__.py\n",
-      "../../../intake_cmip5//__pycache__\n",
-      "../../../intake_cmip5//__pycache__/database.cpython-36.pyc\n",
-      "../../../intake_cmip5//__pycache__/_version.cpython-36.pyc\n",
-      "../../../intake_cmip5//__pycache__/generate_database.cpython-36.pyc\n",
-      "../../../intake_cmip5//__pycache__/source.cpython-36.pyc\n",
-      "../../../intake_cmip5//__pycache__/__init__.cpython-36.pyc\n",
-      "../../../intake_cmip5//source.py\n"
+      "../../../intake_cmip/\n",
+      "../../../intake_cmip//_version.py\n",
+      "../../../intake_cmip//database.py\n",
+      "../../../intake_cmip//__init__.py\n",
+      "../../../intake_cmip//__pycache__\n",
+      "../../../intake_cmip//__pycache__/database.cpython-36.pyc\n",
+      "../../../intake_cmip//__pycache__/_version.cpython-36.pyc\n",
+      "../../../intake_cmip//__pycache__/cmip5.cpython-36.pyc\n",
+      "../../../intake_cmip//__pycache__/__init__.cpython-36.pyc\n",
+      "../../../intake_cmip//cmip5.py\n"
      ]
     }
    ],
    "source": [
-    "!find ../../../intake_cmip5/"
+    "!find ../../../intake_cmip/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Intake-cmip5 contains just one DataSource class, although it could have several related source. \n",
-    "The [source code](https://github.com/NCAR/intake-cmip5) has `CMIP5DataSource` class which subclasses [intake_xarray.base.DataSourceMixin](https://github.com/ContinuumIO/intake-xarray/blob/master/intake_xarray/base.py) class from `intake-xarray` plugin. \n",
+    "Intake-cmip contains just one DataSource class for the time being, although it could have several related source. \n",
+    "The [`cmip5` module](https://github.com/NCAR/intake-cmip) has `CMIP5DataSource` class which subclasses [intake_xarray.base.DataSourceMixin](https://github.com/ContinuumIO/intake-xarray/blob/master/intake_xarray/base.py) class from `intake-xarray` plugin. \n",
     "\n",
     "\n",
     "`CMIP5DataSource` has the following class-level attributes:\n",
@@ -84,11 +83,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LICENSE               \u001b[34mdocs\u001b[m\u001b[m                  setup.cfg\n",
-      "MANIFEST.in           environment-dev.yml   setup.py\n",
-      "README.rst            \u001b[34mintake_cmip5\u001b[m\u001b[m          \u001b[34mtests\u001b[m\u001b[m\n",
-      "\u001b[34m__pycache__\u001b[m\u001b[m           \u001b[34mintake_cmip5.egg-info\u001b[m\u001b[m versioneer.py\n",
-      "\u001b[34mci\u001b[m\u001b[m                    readthedocs.yml\n"
+      "LICENSE              \u001b[34mdocs\u001b[m\u001b[m                 setup.cfg\n",
+      "MANIFEST.in          environment-dev.yml  setup.py\n",
+      "README.rst           \u001b[34mintake_cmip\u001b[m\u001b[m          \u001b[34mtests\u001b[m\u001b[m\n",
+      "\u001b[34m__pycache__\u001b[m\u001b[m          \u001b[34mintake_cmip.egg-info\u001b[m\u001b[m versioneer.py\n",
+      "\u001b[34mci\u001b[m\u001b[m                   readthedocs.yml\n"
      ]
     }
    ],
@@ -146,9 +145,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intake-cmip5 Database\n",
+    "##  Intake-cmip Database\n",
     "\n",
-    "For `intake-cmip5` to generate catalogs, we need to generate a database of netcdf files with their corresponding attributes. To generate this database, we use [CMIP5 Data Reference Syntax](https://cmip.llnl.gov/cmip5/docs/cmip5_data_reference_syntax_v1-00_clean.pdf) to infer the directory structure. Using `os.walk()`, we generate necessary information for each file. This database is then persisted to disk as an `csv` file. \n",
+    "For `intake-cmip` to generate catalogs, we need to generate a database of netcdf files with their corresponding attributes. To generate this database, we use [CMIP5 Data Reference Syntax](https://cmip.llnl.gov/cmip5/docs/cmip5_data_reference_syntax_v1-00_clean.pdf) to infer the directory structure. Using `os.walk()`, we generate necessary information for each file. This database is then persisted to disk as an `csv` file. \n",
     "\n",
     "This file has the following columns:\n",
     "\n",
@@ -204,7 +203,7 @@
     "import xarray as xr\n",
     "import shutil\n",
     "import tempfile\n",
-    "from intake_cmip5.database import create_CMIP5Database"
+    "from intake_cmip.database import create_cmip5_database"
    ]
   },
   {
@@ -254,7 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**** Persisting CMIP5 database in /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmp59esr_5r ****\n"
+      "**** Persisting CMIP5 database in /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmpkga480j0 ****\n"
      ]
     },
     {
@@ -350,7 +349,7 @@
    "source": [
     "# Generate fake cmip5 database\n",
     "setup()\n",
-    "create_CMIP5Database(CMIP5_TEST_DIR, DB_DIR)"
+    "create_cmip5_database(CMIP5_TEST_DIR, DB_DIR)"
    ]
   },
   {
@@ -367,7 +366,7 @@
     }
    ],
    "source": [
-    "!ls /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmp5o57dy80"
+    "!ls {DB_DIR}"
    ]
   },
   {
@@ -406,7 +405,7 @@
     {
      "data": {
       "text/plain": [
-       "<intake_cmip5.source.CMIP5DataSource at 0x1223dfb00>"
+       "<intake_cmip.cmip5.CMIP5DataSource at 0x11ed99d30>"
       ]
      },
      "execution_count": 13,
@@ -516,11 +515,11 @@
      "text": [
       "plugins:\n",
       "  source:\n",
-      "  - module: intake_cmip5.source\n",
+      "  - module: intake_cmip.cmip5\n",
       "sources:\n",
       "  cmip5:\n",
       "    args:\n",
-      "      database_file: /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmp59esr_5r/clean_cmip5_database.csv\n",
+      "      database_file: /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmpkga480j0/clean_cmip5_database.csv\n",
       "      ensemble: r2i1p1\n",
       "      experiment: rcp85\n",
       "      frequency: mon\n",
