--- a/docs/source/notebooks/overview.ipynb
+++ b/docs/source/notebooks/overview.ipynb
@@ -31,12 +31,15 @@
      "output_type": "stream",
      "text": [
       "../../../intake_cmip/\n",
+      "../../../intake_cmip//config.py\n",
       "../../../intake_cmip//_version.py\n",
+      "../../../intake_cmip//cmip5.csv\n",
       "../../../intake_cmip//database.py\n",
       "../../../intake_cmip//__init__.py\n",
       "../../../intake_cmip//__pycache__\n",
       "../../../intake_cmip//__pycache__/database.cpython-36.pyc\n",
       "../../../intake_cmip//__pycache__/_version.cpython-36.pyc\n",
+      "../../../intake_cmip//__pycache__/config.cpython-36.pyc\n",
       "../../../intake_cmip//__pycache__/cmip5.cpython-36.pyc\n",
       "../../../intake_cmip//__pycache__/__init__.cpython-36.pyc\n",
       "../../../intake_cmip//cmip5.py\n"
@@ -203,7 +206,8 @@
     "import xarray as xr\n",
     "import shutil\n",
     "import tempfile\n",
-    "from intake_cmip.database import create_cmip5_database"
+    "from intake_cmip.database import create_cmip5_database\n",
+    "import intake_cmip"
    ]
   },
   {
@@ -253,7 +257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**** Persisting CMIP5 database in /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmpkga480j0 ****\n"
+      "**** Persisting CMIP5 database: /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmphff3n7cm/cmip5.csv ****\n"
      ]
     },
     {
@@ -361,7 +365,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "clean_cmip5_database.csv raw_cmip5_database.csv\n"
+      "cmip5.csv     raw_cmip5.csv\n"
      ]
     }
    ],
@@ -383,7 +387,7 @@
    "outputs": [],
    "source": [
     "# Specify path to database file\n",
-    "db_file_path = f\"{DB_DIR}/clean_cmip5_database.csv\""
+    "db_file_path = f\"{DB_DIR}/cmip5.csv\""
    ]
   },
   {
@@ -392,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = intake.open_cmip5(database_file=db_file_path, model=\"CanESM2\", experiment=\"rcp85\",\n",
+    "source = intake.open_cmip5(database=db_file_path, model=\"CanESM2\", experiment=\"rcp85\",\n",
     "                           frequency=\"mon\", realm=\"atmos\", ensemble=\"r2i1p1\",\n",
     "                           varname=\"Tair\")"
    ]
@@ -405,7 +409,7 @@
     {
      "data": {
       "text/plain": [
-       "<intake_cmip.cmip5.CMIP5DataSource at 0x11ed99d30>"
+       "<intake_cmip.cmip5.CMIP5DataSource at 0x11a4a8e48>"
       ]
      },
      "execution_count": 13,
@@ -460,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = source.to_dask()"
+    "out = source.to_xarray()"
    ]
   },
   {
@@ -519,7 +523,7 @@
       "sources:\n",
       "  cmip5:\n",
       "    args:\n",
-      "      database_file: /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmpkga480j0/clean_cmip5_database.csv\n",
+      "      database: /var/folders/z7/sdhzbbr96bv2wjrsb92qsm3dwz5p3x/T/tmphff3n7cm/cmip5.csv\n",
       "      ensemble: r2i1p1\n",
       "      experiment: rcp85\n",
       "      frequency: mon\n",
@@ -580,6 +584,40 @@
    ],
    "source": [
     "print(source.yaml(True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext watermark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intake      0.2.9\n",
+      "pandas      0.23.4\n",
+      "xarray      0.11.0\n",
+      "intake_cmip  0+untagged.85.gd38875e.dirty\n",
+      "last updated: 2018-12-27 \n",
+      "\n",
+      "CPython 3.6.7\n",
+      "IPython 7.0.1\n",
+      "Git hash: d38875e518ff2dcb9d30369342a4d84d2b26f217\n"
+     ]
+    }
+   ],
+   "source": [
+    "%watermark --iversion -g -v -u -d"
    ]
   }
  ],
